[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hkc_ai"
version = "0.1.0"
description = "Shared model router and cost tracker for HKC pipelines"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.25",
    "openai>=1.30",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["hkc_ai*"]
